# social-media-mongodb-server

./: .gitignore  README.md  pyproject.toml  social_media_api.postman_collection.json  social_media_api_updated.postman_collection.json
social_media_mongodb_server/: auth.py  config.py  db.py  main.py  models.py  routes_posts.py  users.py
social_media_mongodb_server/models/: comment_models.py  mcp_models.py  post_models.py  user_models.py
social_media_mongodb_server/repositories/: comments_repo.py  posts_repo.py  users_repo.py
social_media_mongodb_server/routes/: auth.py  comments.py  mcp_proxy.py  posts.py
social_media_mongodb_server/scripts/: test_flux_mcp.py
social_media_mongodb_server/security/: jwt_config.py
social_media_mongodb_server/services/: auth_service.py  comments_service.py  imagegen_service.py  posts_service.py
social_media_mongodb_server/tasks/: email_tasks.py
social_media_mongodb_server/utils/: helpers.py  sendgrid_utils.py
